--- a/server/containers/docker/docker-compose-cluster-1-node.yaml
+++ b/server/containers/docker/docker-compose-cluster-1-node.yaml
@@ -26,13 +26,15 @@ mongodbhost:
     image: mongo
     ports:
         -  "27017:27017"
-postgreshost:
-    image: postgres
+mariadb:
+    image: mariadb
     expose:
-        - "5432"
+        - "3306"
     environment:
-        - POSTGRES_PASSWORD=admin
-        - POSTGRES_DB=kaa
+        - MYSQL_ROOT_PASSWORD=admin
+        - MYSQL_DATABASE=kaa
+        - MYSQL_USER=sqladmin
+        - MYSQL_PASSWORD=admin
 kaa_node:
     image: kaaproject/node:0.9.0
     environment:
@@ -43,11 +45,11 @@ kaa_node:
         - ZK_HOSTS=zookeeperhost:2181
         - CASSANDRA_HOSTS=cassandrahost:9042
         - MONGODB_HOSTS=mongodbhost:27017
-        - JDBC_HOST=postgreshost
-        - JDBC_PORT=5432
+        - JDBC_HOST=mariadb
+        - JDBC_PORT=3306
     command: bash -c "/config_listener.sh && /usr/bin/kaa-node start && while true; do sleep 1; done"
     links:
         - cassandrahost
         - zookeeperhost
         - mongodbhost
-        - postgreshost
+        - mariadb
